feat: overall improvements (#9)
* feat: overall improvements

* fix: smells and missing tests
